<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:backgroundTint="@color/red"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/parenthesisbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/parenthesis"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exponentbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/exponent"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,TextContrastCheck"
                android:backgroundTint="@color/orange">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dividebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp"
                >

            </androidx.appcompat.widget.AppCompatButton>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/seven"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/eight"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ninebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/nine"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiplybtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/multiply"
                android:textColor="#455A64"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,TextContrastCheck">

            </androidx.appcompat.widget.AppCompatButton>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/four"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fivebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/five"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/six"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtractbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/onebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/one"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twobtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/two"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="5dp">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/three"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp">
             </androidx.appcompat.widget.AppCompatButton>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusMinusbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plusMinus"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zerobtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/zero"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pointbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                >

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalsbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#23F70A"
                android:text="@string/equals"
                android:textColor="#757575"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck">

            </androidx.appcompat.widget.AppCompatButton>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspacebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:contentDescription="@string/backspace"
        android:background="@drawable/circle"
        app:srcCompat="@drawable/backspace"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_margin="5dp">

    </ImageButton>

</androidx.constraintlayout.widget.ConstraintLayout>